--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,13 @@
 {
   "plugins": [
     [
-      "module-resolver", {
+      "module-resolver",
+      {
         "root": ["."],
         "alias": {
           "styles": "./styles"
         },
         "cwd": "babelrc"
-    }],
-    [
-      "wrap-in-js",
-      {
-        "extensions": ["css$", "scss$"]
       }
     ]
   ],
