--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "autoprefixer": "^9.1.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
+    "css-loader": "^6.11.0",
     "glob": "^7.1.3",
     "next": "^7.0.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^6.2.1",
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "style-loader": "^2.0.0"
+  },
+  "devDependencies": {
     "sass": "^1.81.0",
-    "sass-loader": "^7.1.0",
-    "webpack": "^5.96.1"
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   }
 }
