--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-regenerator": "^7.25.9",
+    "@babel/runtime": "^7.26.0",
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-brands": "^5.0.10",
     "@fortawesome/fontawesome-free-regular": "^5.0.10",
-    "@fortawesome/react-fontawesome": "0.0.18",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^9.1.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "css-loader": "^6.11.0",
     "glob": "^7.1.3",
-    "next": "^7.0.0",
+    "next": "^15.0.3",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^6.2.1",
     "raw-loader": "^0.5.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "sass": "^1.81.0",
-    "sass-loader": "^12.6.0",
+    "sass-loader": "^16.0.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
